objects/amc__Field_Mapping__c.object
<CustomObject>
    <description>Used by the Opportunity trigger to determine field mapping requirements when cloning a template Project.</description>
    <fields>
        <fullName>amc__Source_Field__c</fullName>
        <description>Source Field this mapping relates to</description>
        <inlineHelpText>Source Field this mapping relates to</inlineHelpText>
        <label>Source Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Source_Object__c</fullName>
        <description>Source Object this mapping relates to</description>
        <inlineHelpText>Source Object this mapping relates to</inlineHelpText>
        <label>Source Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Target_Field__c</fullName>
        <description>Target Field this mapping relates to</description>
        <inlineHelpText>Target Field this mapping relates to</inlineHelpText>
        <label>Target Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Target_Object__c</fullName>
        <description>Target Object this mapping relates to</description>
        <inlineHelpText>Target Object this mapping relates to</inlineHelpText>
        <label>Target Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Field Mapping</label>
    <nameField>
        <displayFormat>M{0}</displayFormat>
        <label>Mapping</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>